overhauling generation to group like outputs in a collapsable

--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -41,8 +41,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 ### Crafting Recipes
 		<details>
 			<summary>Recipes using Chemical Reactor</summary>
-			
-<Machine config={{
+			<details>
+				<summary><McItem slug="minecraft:black_candle" /></summary>
+				<Machine config={{
   "id": "black_candle_from_candle_with_black_dye",
   "input": [
     {
@@ -90,7 +91,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:black_carpet" /></summary>
+				<Machine config={{
   "id": "black_carpet_from_gray_carpet_with_black_dye",
   "input": [
     {
@@ -138,7 +142,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:black_concrete_powder" /></summary>
+				<Machine config={{
   "id": "black_concrete_powder_from_gray_concrete_powder_with_black_dye",
   "input": [
     {
@@ -186,7 +193,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:black_stained_glass" /></summary>
+				<Machine config={{
   "id": "black_stained_glass_from_glass_with_black_dye",
   "input": [
     {
@@ -234,7 +244,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:black_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "black_stained_glass_pane_from_glass_pane_with_black_dye",
   "input": [
     {
@@ -282,7 +295,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:black_terracotta" /></summary>
+				<Machine config={{
   "id": "black_terracotta_from_gray_terracotta_with_black_dye",
   "input": [
     {
@@ -330,7 +346,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:black_wool" /></summary>
+				<Machine config={{
   "id": "black_wool_from_gray_wool_with_black_dye",
   "input": [
     {
@@ -378,7 +397,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:blue_candle" /></summary>
+				<Machine config={{
   "id": "blue_candle_from_candle_with_blue_dye",
   "input": [
     {
@@ -498,7 +520,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:blue_carpet" /></summary>
+				<Machine config={{
   "id": "blue_carpet_from_cyan_carpet_with_blue_dye",
   "input": [
     {
@@ -618,7 +643,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:blue_concrete_powder" /></summary>
+				<Machine config={{
   "id": "blue_concrete_powder_from_cyan_concrete_powder_with_blue_dye",
   "input": [
     {
@@ -738,7 +766,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:blue_stained_glass" /></summary>
+				<Machine config={{
   "id": "blue_stained_glass_from_cyan_stained_glass_with_blue_dye",
   "input": [
     {
@@ -858,7 +889,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:blue_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "blue_stained_glass_pane_from_cyan_stained_glass_pane_with_blue_dye",
   "input": [
     {
@@ -978,7 +1012,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:blue_terracotta" /></summary>
+				<Machine config={{
   "id": "blue_terracotta_from_cyan_terracotta_with_blue_dye",
   "input": [
     {
@@ -1098,7 +1135,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:blue_wool" /></summary>
+				<Machine config={{
   "id": "blue_wool_from_cyan_wool_with_blue_dye",
   "input": [
     {
@@ -1218,6 +1258,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "bone",
   "input": [
@@ -1242,7 +1283,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 400
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:brown_candle" /></summary>
+				<Machine config={{
   "id": "brown_candle_from_black_candle_with_orange_dye",
   "input": [
     {
@@ -1386,7 +1429,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:brown_carpet" /></summary>
+				<Machine config={{
   "id": "brown_carpet_from_black_carpet_with_orange_dye",
   "input": [
     {
@@ -1530,7 +1576,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:brown_concrete_powder" /></summary>
+				<Machine config={{
   "id": "brown_concrete_powder_from_black_concrete_powder_with_orange_dye",
   "input": [
     {
@@ -1674,7 +1723,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:brown_stained_glass" /></summary>
+				<Machine config={{
   "id": "brown_stained_glass_from_black_stained_glass_with_orange_dye",
   "input": [
     {
@@ -1818,7 +1870,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:brown_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "brown_stained_glass_pane_from_black_stained_glass_pane_with_orange_dye",
   "input": [
     {
@@ -1962,7 +2017,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:brown_terracotta" /></summary>
+				<Machine config={{
   "id": "brown_terracotta_from_black_terracotta_with_orange_dye",
   "input": [
     {
@@ -2106,7 +2164,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:brown_wool" /></summary>
+				<Machine config={{
   "id": "brown_wool_from_black_wool_with_orange_dye",
   "input": [
     {
@@ -2250,6 +2311,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "calcium_carbonate",
   "input": [
@@ -2274,7 +2336,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 800
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:cyan_candle" /></summary>
+				<Machine config={{
   "id": "cyan_candle_from_blue_candle_with_green_dye",
   "input": [
     {
@@ -2370,7 +2434,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:cyan_carpet" /></summary>
+				<Machine config={{
   "id": "cyan_carpet_from_blue_carpet_with_green_dye",
   "input": [
     {
@@ -2466,7 +2533,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:cyan_concrete_powder" /></summary>
+				<Machine config={{
   "id": "cyan_concrete_powder_from_blue_concrete_powder_with_green_dye",
   "input": [
     {
@@ -2562,7 +2632,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:cyan_stained_glass" /></summary>
+				<Machine config={{
   "id": "cyan_stained_glass_from_blue_stained_glass_with_green_dye",
   "input": [
     {
@@ -2658,7 +2731,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:cyan_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "cyan_stained_glass_pane_from_blue_stained_glass_pane_with_green_dye",
   "input": [
     {
@@ -2754,7 +2830,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:cyan_terracotta" /></summary>
+				<Machine config={{
   "id": "cyan_terracotta_from_blue_terracotta_with_green_dye",
   "input": [
     {
@@ -2850,7 +2929,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:cyan_wool" /></summary>
+				<Machine config={{
   "id": "cyan_wool_from_blue_wool_with_green_dye",
   "input": [
     {
@@ -2946,6 +3028,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "dark_prismarine",
   "input": [
@@ -3162,7 +3245,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 400
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:gray_candle" /></summary>
+				<Machine config={{
   "id": "gray_candle_from_black_candle_with_light_gray_dye",
   "input": [
     {
@@ -3306,7 +3391,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:gray_carpet" /></summary>
+				<Machine config={{
   "id": "gray_carpet_from_black_carpet_with_light_gray_dye",
   "input": [
     {
@@ -3402,7 +3490,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:gray_concrete_powder" /></summary>
+				<Machine config={{
   "id": "gray_concrete_powder_from_black_concrete_powder_with_light_gray_dye",
   "input": [
     {
@@ -3498,7 +3589,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:gray_stained_glass" /></summary>
+				<Machine config={{
   "id": "gray_stained_glass_from_black_stained_glass_with_light_gray_dye",
   "input": [
     {
@@ -3642,7 +3736,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:gray_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "gray_stained_glass_pane_from_black_stained_glass_pane_with_light_gray_dye",
   "input": [
     {
@@ -3786,7 +3883,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:gray_terracotta" /></summary>
+				<Machine config={{
   "id": "gray_terracotta_from_black_terracotta_with_light_gray_dye",
   "input": [
     {
@@ -3930,7 +4030,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:gray_wool" /></summary>
+				<Machine config={{
   "id": "gray_wool_from_black_wool_with_light_gray_dye",
   "input": [
     {
@@ -4026,7 +4129,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:green_candle" /></summary>
+				<Machine config={{
   "id": "green_candle_from_blue_candle_with_yellow_dye",
   "input": [
     {
@@ -4170,7 +4276,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:green_carpet" /></summary>
+				<Machine config={{
   "id": "green_carpet_from_blue_carpet_with_yellow_dye",
   "input": [
     {
@@ -4314,7 +4423,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:green_concrete_powder" /></summary>
+				<Machine config={{
   "id": "green_concrete_powder_from_blue_concrete_powder_with_yellow_dye",
   "input": [
     {
@@ -4458,7 +4570,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:green_stained_glass" /></summary>
+				<Machine config={{
   "id": "green_stained_glass_from_blue_stained_glass_with_yellow_dye",
   "input": [
     {
@@ -4602,7 +4717,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:green_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "green_stained_glass_pane_from_blue_stained_glass_pane_with_yellow_dye",
   "input": [
     {
@@ -4746,7 +4864,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:green_terracotta" /></summary>
+				<Machine config={{
   "id": "green_terracotta_from_blue_terracotta_with_yellow_dye",
   "input": [
     {
@@ -4890,7 +5011,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:green_wool" /></summary>
+				<Machine config={{
   "id": "green_wool_from_blue_wool_with_yellow_dye",
   "input": [
     {
@@ -5034,6 +5158,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "leather",
   "input": [
@@ -5058,7 +5183,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 300
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:light_blue_candle" /></summary>
+				<Machine config={{
   "id": "light_blue_candle_from_blue_candle_with_light_gray_dye",
   "input": [
     {
@@ -5250,7 +5377,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_blue_carpet" /></summary>
+				<Machine config={{
   "id": "light_blue_carpet_from_blue_carpet_with_light_gray_dye",
   "input": [
     {
@@ -5394,7 +5524,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_blue_concrete_powder" /></summary>
+				<Machine config={{
   "id": "light_blue_concrete_powder_from_blue_concrete_powder_with_light_gray_dye",
   "input": [
     {
@@ -5538,7 +5671,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_blue_stained_glass" /></summary>
+				<Machine config={{
   "id": "light_blue_stained_glass_from_blue_stained_glass_with_light_gray_dye",
   "input": [
     {
@@ -5730,7 +5866,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_blue_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "light_blue_stained_glass_pane_from_blue_stained_glass_pane_with_light_gray_dye",
   "input": [
     {
@@ -5922,7 +6061,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_blue_terracotta" /></summary>
+				<Machine config={{
   "id": "light_blue_terracotta_from_blue_terracotta_with_light_gray_dye",
   "input": [
     {
@@ -6114,7 +6256,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_blue_wool" /></summary>
+				<Machine config={{
   "id": "light_blue_wool_from_blue_wool_with_light_gray_dye",
   "input": [
     {
@@ -6258,7 +6403,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_gray_candle" /></summary>
+				<Machine config={{
   "id": "light_gray_candle_from_candle_with_light_gray_dye",
   "input": [
     {
@@ -6354,6 +6502,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "light_gray_carpet_from_white_carpet_with_light_gray_dye",
   "input": [
@@ -6402,7 +6551,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:light_gray_stained_glass" /></summary>
+				<Machine config={{
   "id": "light_gray_stained_glass_from_glass_with_light_gray_dye",
   "input": [
     {
@@ -6498,7 +6649,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_gray_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "light_gray_stained_glass_pane_from_glass_pane_with_light_gray_dye",
   "input": [
     {
@@ -6594,7 +6748,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:light_gray_terracotta" /></summary>
+				<Machine config={{
   "id": "light_gray_terracotta_from_gray_terracotta_with_white_dye",
   "input": [
     {
@@ -6690,6 +6847,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "light_gray_wool_from_white_wool_with_light_gray_dye",
   "input": [
@@ -6714,7 +6872,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:lime_candle" /></summary>
+				<Machine config={{
   "id": "lime_candle_from_candle_with_lime_dye",
   "input": [
     {
@@ -6882,7 +7042,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:lime_carpet" /></summary>
+				<Machine config={{
   "id": "lime_carpet_from_cyan_carpet_with_yellow_dye",
   "input": [
     {
@@ -7002,7 +7165,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:lime_concrete_powder" /></summary>
+				<Machine config={{
   "id": "lime_concrete_powder_from_cyan_concrete_powder_with_yellow_dye",
   "input": [
     {
@@ -7122,7 +7288,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:lime_stained_glass" /></summary>
+				<Machine config={{
   "id": "lime_stained_glass_from_cyan_stained_glass_with_yellow_dye",
   "input": [
     {
@@ -7290,7 +7459,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:lime_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "lime_stained_glass_pane_from_cyan_stained_glass_pane_with_yellow_dye",
   "input": [
     {
@@ -7458,7 +7630,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:lime_terracotta" /></summary>
+				<Machine config={{
   "id": "lime_terracotta_from_cyan_terracotta_with_yellow_dye",
   "input": [
     {
@@ -7626,7 +7801,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:lime_wool" /></summary>
+				<Machine config={{
   "id": "lime_wool_from_cyan_wool_with_yellow_dye",
   "input": [
     {
@@ -7746,7 +7924,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:magenta_candle" /></summary>
+				<Machine config={{
   "id": "magenta_candle_from_candle_with_magenta_dye",
   "input": [
     {
@@ -7866,7 +8047,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:magenta_carpet" /></summary>
+				<Machine config={{
   "id": "magenta_carpet_from_gray_carpet_with_pink_dye",
   "input": [
     {
@@ -7986,7 +8170,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:magenta_concrete_powder" /></summary>
+				<Machine config={{
   "id": "magenta_concrete_powder_from_gray_concrete_powder_with_pink_dye",
   "input": [
     {
@@ -8106,7 +8293,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:magenta_stained_glass" /></summary>
+				<Machine config={{
   "id": "magenta_stained_glass_from_glass_with_magenta_dye",
   "input": [
     {
@@ -8226,7 +8416,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:magenta_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "magenta_stained_glass_pane_from_glass_pane_with_magenta_dye",
   "input": [
     {
@@ -8346,7 +8539,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:magenta_terracotta" /></summary>
+				<Machine config={{
   "id": "magenta_terracotta_from_gray_terracotta_with_pink_dye",
   "input": [
     {
@@ -8466,7 +8662,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:magenta_wool" /></summary>
+				<Machine config={{
   "id": "magenta_wool_from_gray_wool_with_pink_dye",
   "input": [
     {
@@ -8586,6 +8785,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "magma_cream",
   "input": [
@@ -8754,7 +8954,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 400
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:orange_candle" /></summary>
+				<Machine config={{
   "id": "orange_candle_from_candle_with_orange_dye",
   "input": [
     {
@@ -8826,7 +9028,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:orange_carpet" /></summary>
+				<Machine config={{
   "id": "orange_carpet_from_pink_carpet_with_orange_dye",
   "input": [
     {
@@ -8898,7 +9103,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:orange_concrete_powder" /></summary>
+				<Machine config={{
   "id": "orange_concrete_powder_from_pink_concrete_powder_with_orange_dye",
   "input": [
     {
@@ -8970,7 +9178,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:orange_stained_glass" /></summary>
+				<Machine config={{
   "id": "orange_stained_glass_from_glass_with_orange_dye",
   "input": [
     {
@@ -9042,7 +9253,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:orange_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "orange_stained_glass_pane_from_glass_pane_with_orange_dye",
   "input": [
     {
@@ -9114,7 +9328,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:orange_terracotta" /></summary>
+				<Machine config={{
   "id": "orange_terracotta_from_pink_terracotta_with_orange_dye",
   "input": [
     {
@@ -9186,7 +9403,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:orange_wool" /></summary>
+				<Machine config={{
   "id": "orange_wool_from_pink_wool_with_orange_dye",
   "input": [
     {
@@ -9258,7 +9478,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:pink_candle" /></summary>
+				<Machine config={{
   "id": "pink_candle_from_candle_with_pink_dye",
   "input": [
     {
@@ -9426,7 +9649,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:pink_carpet" /></summary>
+				<Machine config={{
   "id": "pink_carpet_from_light_gray_carpet_with_magenta_dye",
   "input": [
     {
@@ -9498,7 +9724,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:pink_concrete_powder" /></summary>
+				<Machine config={{
   "id": "pink_concrete_powder_from_light_gray_concrete_powder_with_magenta_dye",
   "input": [
     {
@@ -9570,7 +9799,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:pink_stained_glass" /></summary>
+				<Machine config={{
   "id": "pink_stained_glass_from_glass_with_pink_dye",
   "input": [
     {
@@ -9738,7 +9970,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:pink_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "pink_stained_glass_pane_from_glass_pane_with_pink_dye",
   "input": [
     {
@@ -9906,7 +10141,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:pink_terracotta" /></summary>
+				<Machine config={{
   "id": "pink_terracotta_from_light_gray_terracotta_with_magenta_dye",
   "input": [
     {
@@ -10074,7 +10312,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:pink_wool" /></summary>
+				<Machine config={{
   "id": "pink_wool_from_light_gray_wool_with_magenta_dye",
   "input": [
     {
@@ -10146,6 +10387,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "pointed_dripstone",
   "input": [
@@ -10170,7 +10412,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 400
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:purple_candle" /></summary>
+				<Machine config={{
   "id": "purple_candle_from_blue_candle_with_magenta_dye",
   "input": [
     {
@@ -10314,7 +10558,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:purple_carpet" /></summary>
+				<Machine config={{
   "id": "purple_carpet_from_blue_carpet_with_magenta_dye",
   "input": [
     {
@@ -10458,7 +10705,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:purple_concrete_powder" /></summary>
+				<Machine config={{
   "id": "purple_concrete_powder_from_blue_concrete_powder_with_magenta_dye",
   "input": [
     {
@@ -10602,7 +10852,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:purple_stained_glass" /></summary>
+				<Machine config={{
   "id": "purple_stained_glass_from_blue_stained_glass_with_magenta_dye",
   "input": [
     {
@@ -10746,7 +10999,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:purple_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "purple_stained_glass_pane_from_blue_stained_glass_pane_with_magenta_dye",
   "input": [
     {
@@ -10890,7 +11146,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:purple_terracotta" /></summary>
+				<Machine config={{
   "id": "purple_terracotta_from_blue_terracotta_with_magenta_dye",
   "input": [
     {
@@ -11034,7 +11293,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:purple_wool" /></summary>
+				<Machine config={{
   "id": "purple_wool_from_blue_wool_with_magenta_dye",
   "input": [
     {
@@ -11178,7 +11440,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:red_candle" /></summary>
+				<Machine config={{
   "id": "red_candle_from_candle_with_red_dye",
   "input": [
     {
@@ -11274,7 +11539,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:red_carpet" /></summary>
+				<Machine config={{
   "id": "red_carpet_from_magenta_carpet_with_red_dye",
   "input": [
     {
@@ -11370,7 +11638,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:red_concrete_powder" /></summary>
+				<Machine config={{
   "id": "red_concrete_powder_from_magenta_concrete_powder_with_red_dye",
   "input": [
     {
@@ -11466,7 +11737,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:red_stained_glass" /></summary>
+				<Machine config={{
   "id": "red_stained_glass_from_glass_with_red_dye",
   "input": [
     {
@@ -11562,7 +11836,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:red_stained_glass_pane" /></summary>
+				<Machine config={{
   "id": "red_stained_glass_pane_from_glass_pane_with_red_dye",
   "input": [
     {
@@ -11658,7 +11935,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:red_terracotta" /></summary>
+				<Machine config={{
   "id": "red_terracotta_from_magenta_terracotta_with_red_dye",
   "input": [
     {
@@ -11754,7 +12034,10 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
-<Machine config={{
+				</details>
+<details>
+				<summary><McItem slug="minecraft:red_wool" /></summary>
+				<Machine config={{
   "id": "red_wool_from_magenta_wool_with_red_dye",
   "input": [
     {
@@ -11850,6 +12133,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+				</details>
 <Machine config={{
   "id": "sculk_sensor",
   "input": [
@@ -11922,7 +12206,9 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 400
   }
 }} />
-<Machine config={{
+<details>
+				<summary><McItem slug="minecraft:shroomlight" /></summary>
+				<Machine config={{
   "id": "shroomlight_from_brown_mushroom",
   "input": [
     {
@@ -12018,6 +12304,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 400
   }
 }} />
+				</details>
 <Machine config={{
   "id": "sodium_persulfate",
   "input": [
@@ -12810,4 +13097,5 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
     "time": 250
   }
 }} />
+
 		</details>
