--- a/docs/blocks/machines/industrial_centrifuge.mdx
+++ b/docs/blocks/machines/industrial_centrifuge.mdx
@@ -60,8 +60,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
 ### Crafting Recipes
 		<details>
 			<summary>Recipes using Industrial Centrifuge</summary>
-			
-<Machine config={{
+			<Machine config={{
   "id": "basalt_dust",
   "input": [
     {
@@ -911,7 +910,9 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
     "time": 2050
   }
 }} />
-
+<details>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				
 
 
 
@@ -986,6 +987,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
     "time": 500
   }
 }} />
+				</details>
 <Machine config={{
   "id": "moss_block",
   "input": [
@@ -1766,4 +1768,5 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
     "time": 1050
   }
 }} />
+
 		</details>
